--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-</head>
+<!-- Code injected by Five-server -->
+  <script async data-id="five-server" data-file="c:\Users\jaiso\Downloads\Week 2\Personal\index.html" type="application/javascript" src="/fiveserver.js"></script>
+  </head>
 
 <body>
 
@@ -288,10 +290,10 @@
         </div>
       </div>
 
-      <form method="post" action="https://script.google.com/macros/s/AKfycbznvp-PivUpnSZWnzPHXq-e7EvtGUIfqhpBNnd336A8BT6jW4s473tXs8LgQKHciL_R/exec" method="post" role="form" class="php-email-form mt-4" id="submit-form">
+      <form method="post" action="https://script.google.com/macros/s/AKfycbznvp-PivUpnSZWnzPHXq-e7EvtGUIfqhpBNnd336A8BT6jW4s473tXs8LgQKHciL_R/exec"  role="form" class="php-email-form mt-4" id="submit-form">
         <div class="row">
           <div class="col-md-6 form-group">
-            <input type="text" name="name" class="form-control" id="name" pattern="[A-Za-z]+" title="Please enter a valid name (letters only)" placeholder="Your Name" required>
+            <input type="text" name="name" class="form-control" id="name" pattern="[A-Za-z ]+" title="Please enter a valid name (letters and spaces only)" placeholder="Your Name" required>
           </div>
           <div class="col-md-6 form-group mt-3 mt-md-0">
             <input type="email" class="form-control" name="email" id="submit-form" placeholder="Your Email" required>
