--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio</title>
+  <title>Silva</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -290,7 +290,7 @@
         </div>
       </div>
 
-      <form method="post" action="https://script.google.com/macros/s/AKfycbznvp-PivUpnSZWnzPHXq-e7EvtGUIfqhpBNnd336A8BT6jW4s473tXs8LgQKHciL_R/exec"  role="form" class="php-email-form mt-4" id="submit-form">
+      <form action=""  role="form" class="php-email-form mt-4" id="submitt">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" pattern="[A-Za-z ]+" title="Please enter a valid name (letters and spaces only)" placeholder="Your Name" required>
@@ -323,6 +323,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
